# mcp-registry-search

./: .env.example  .gitignore  .vercelignore  Makefile  README.md  api.py  app.py  etl.py  main.py  mcp_agent.config.yaml  mcp_server.py  pyproject.toml  requirements.txt  schema.sql  search.py  vercel.json
.github/workflows/: checks.yml  main-checks.yml
api/: index.py  mcp.py  messages.ts  sse.ts
api/cron/: etl.py
src/mcp_registry_search/: api.py  etl.py  mcp_server.py  search.py
