[project]
name = "mcp-registry-search"
version = "0.1.0"
description = "Semantic search API for MCP server registry"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "supabase>=2.10.0",
    "pydantic>=2.10.0",
    "mcp>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"