[project]
name = "mcp-registry-search"
version = "0.1.0"
description = "Semantic search API for MCP server registry"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "supabase>=2.10.0",
    "pydantic>=2.10.0",
    "mcp>=1.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"